SET(LIBARGCVNW_VERSION 1.0)
SET(LIBARGCVNW_SOVERSION 0.1)

SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O3 -Wall -std=gnu99")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -Wall -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(. LIBARNETNW_SRC)

# ARNETNW start
# SET(LIBARNETNW_SRC argcvnw.c)
ADD_LIBRARY(argcvnw SHARED ${LIBARNETNW_SRC})
SET_TARGET_PROPERTIES(argcvnw PROPERTIES VERSION ${LIBARGCVNW_VERSION} SOVERSION ${LIBARGCVNW_SOVERSION})

#TARGET_LINK_LIBRARIES(argcvnw error)
#TARGET_LINK_LIBRARIES(argcvnw_s argcvnw)


ADD_LIBRARY(argcvnw_s STATIC ${LIBARNETNW_SRC})
SET_TARGET_PROPERTIES(argcvnw_s PROPERTIES OUTPUT_NAME "argcvnw")

INSTALL (TARGETS argcvnw argcvnw_s
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/argcvnw.h DESTINATION include/)

# ARNETNW end




